--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,7 @@ jobs:
         cache: maven
     - name: Testes variaveis
       run: |
-        echo ${{vars.V_TESTE}} >> ~/.bashrc
+        echo ${{secrets.S_TESTE}} >> ~/.bashrc
         source ~/.bashrc
         echo $TESTE1
         echo $TESTE2        
