--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
         echo ${{secrets.S_TESTE}} >> ~/.bashrc
         source ~/.bashrc
+        echo $TESTE
         echo $TESTE1
         echo $TESTE2        
         echo $TESTE3
