--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,7 +32,7 @@ jobs:
         echo ${{secrets.S_TESTE}} >> ~/.bashrc
         source ~/.bashrc
         echo $TESTE
-        echo $TESTE1
+        ssh $TESTE1
         echo $TESTE2        
         echo $TESTE3
       #echo "${{secrets.ENV_FILE}}" >> ~/.bashrc
