--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,11 +32,18 @@ jobs:
         echo ${{secrets.S_TESTE}} >> ~/.bashrc
         source ~/.bashrc
         echo $TESTE
-        ssh $TESTE1
+        echo $TESTE1
         echo $TESTE2        
         echo $TESTE3
-      #echo "${{secrets.ENV_FILE}}" >> ~/.bashrc
+    #echo "${{secrets.ENV_FILE}}" >> ~/.bashrc
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    #  echo $TESTE123
+    #  echo $TESTE1
     #  echo $TESTE2
     #  echo $TESTE3
+  teste:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Teste persistencia
+        run: |
+          echo $TESTE1
