--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,9 +31,9 @@ jobs:
       run: |
         echo ${{secrets.S_TESTE}} >> ~/.bashrc
         source ~/.bashrc
-        echo "::set-output name=teste1::${$TESTE1}"
-        echo "::set-output name=teste2::${$TESTE2}"      
-        echo "::set-output name=teste3::${$TESTE3}"
+        export TESTE45=Imario
+        echo "::set-output name=teste1::${$TESTE45}"
+        
 
     #echo "${{secrets.ENV_FILE}}" >> ~/.bashrc
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
