--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -15,10 +15,22 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
-
+  seting-variables:
     runs-on: ubuntu-latest
+    steps:
+    - id: teste
+      run: |
+        echo ${{secrets.S_TESTE}} >> ~/.bashrc
+        source ~/.bashrc
+        export TESTE45=Imario
+        echo "::set-output name=teste1::${$TESTE45}"
+        echo "::set-output name=teste2::${$TESTE1}"
+    outputs:
+      teste1: ${{ steps.teste.outputs.teste1 }}
+      teste2: ${{ steps.teste.outputs.teste2 }}
 
+  build:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
@@ -27,12 +39,8 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
-    - name: Testes variaveis
-      run: |
-        echo ${{secrets.S_TESTE}} >> ~/.bashrc
-        source ~/.bashrc
-        export TESTE45=Imario
-        echo "::set-output name=teste1::${$TESTE45}"
+
+
         
 
     #echo "${{secrets.ENV_FILE}}" >> ~/.bashrc
@@ -41,9 +49,9 @@ jobs:
     #  echo $TESTE2
     #  echo $TESTE3
   teste:
-    needs: build
+    needs: seting-variables
     runs-on: ubuntu-latest
     steps:
       - name: Teste persistencia
         run: |
-          echo "${{ needs.build.outputs.teste1 }}"
+          echo "${{ needs.teste.outputs.teste1 }}"
