--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,8 +23,8 @@ jobs:
         echo ${{secrets.S_TESTE}} >> ~/.bashrc
         source ~/.bashrc
         export TESTE45=Imario
-        echo "::set-output name=teste1::${$TESTE45}"
-        echo "::set-output name=teste2::${$TESTE1}"
+        echo "::set-output name=teste1::${TESTE45}"
+        echo "::set-output name=teste2::${TESTE1}"
     outputs:
       teste1: ${{ steps.teste.outputs.teste1 }}
       teste2: ${{ steps.teste.outputs.teste2 }}
@@ -54,4 +54,4 @@ jobs:
     steps:
       - name: Teste persistencia
         run: |
-          echo "${{ needs.teste.outputs.teste1 }}"
+          echo "${{ needs.teste.outputs.teste2 }}"
