--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,10 +23,10 @@ jobs:
         echo ${{secrets.S_TESTE}} >> ~/.bashrc
         source ~/.bashrc
         export TESTE45=Imario
-        echo "teste=${TESTE45}" >> $GITHUB_OUTPUT
-        echo "::set-output name=teste2::${TESTE1}"
+        echo "teste1=${TESTE1}" >> $GITHUB_OUTPUT
+        echo "teste2=${TESTE2}" >> $GITHUB_OUTPUT
     outputs:
-      teste: ${{ steps.teste.outputs.teste }}
+      teste1: ${{ steps.teste.outputs.teste1 }}
       teste2: ${{ steps.teste.outputs.teste2 }}
   build:
     runs-on: ubuntu-latest
