--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
     - id: seting
       run: |
-        echo ${{secrets.V_TESTE}} >> ~/.bashrc
+        echo ${{vars.V_TESTE}} >> ~/.bashrc
         source ~/.bashrc
         echo "docker_org=${DOCKER_ORGANIZATION}" >> $GITHUB_OUTPUT
         echo "dockerhub_user=${DOCKERHUB_USER}" >> $GITHUB_OUTPUT
