--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         echo ${{vars.V_TESTE2}} >> ~/.bashrc
         source ~/.bashrc
-        echo "docker_org=${DOCKER_ORGANIZATION}" >> $GITHUB_OUTPUT
+        echo "docker_org="${DOCKER_ORGANIZATION}"" >> $GITHUB_OUTPUT
         echo "dockerhub_user=${DOCKERHUB_USER}" >> $GITHUB_OUTPUT
         echo "dockerhub_pwd=${DOCKERHUB_PWD}" >> $GITHUB_OUTPUT
         echo "project_name=${PROJECT_NAME}" >> $GITHUB_OUTPUT
