--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,7 +23,7 @@ jobs:
         echo ${{vars.V_TESTE2}} >> ~/.bashrc
         source ~/.bashrc
         TESTE=$(echo "$DOCKER_ORGANIZATION" | sed 's/\r/g')
-        ls $DOCKER_ORGANIZATION
+        ls $TESTE
         echo "docker_org=${DOCKER_ORGANIZATION}" >> $GITHUB_OUTPUT
         echo "dockerhub_user=${DOCKERHUB_USER}" >> $GITHUB_OUTPUT
         echo "dockerhub_pwd=${DOCKERHUB_PWD}" >> $GITHUB_OUTPUT
