--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,10 +20,10 @@ jobs:
     steps:
     - id: seting
       run: |
-        echo ${{vars.V_TESTE2}} >> ~/.bashrc
+        echo ${{vars.V_TESTE2}} >> teste.txt
+        cat teste.txt >> ~/.bashrc
         source ~/.bashrc
-        TESTE=$(echo "$DOCKER_ORGANIZATION" | sed 's/\r/g')
-        ls $TESTE
+        ls $DOCKER_ORGANIZATION
         echo "docker_org=${DOCKER_ORGANIZATION}" >> $GITHUB_OUTPUT
         echo "dockerhub_user=${DOCKERHUB_USER}" >> $GITHUB_OUTPUT
         echo "dockerhub_pwd=${DOCKERHUB_PWD}" >> $GITHUB_OUTPUT
