--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,7 @@ jobs:
     - id: seting
       run: |
         echo ${{vars.V_TESTE2}} >> teste.txt
-        cat teste.txt >> ~/.bashrc
+        tr -d '\r' teste.txt >> ~/.bashrc
         source ~/.bashrc
         ls $DOCKER_ORGANIZATION
         echo "docker_org=${DOCKER_ORGANIZATION}" >> $GITHUB_OUTPUT
