--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,7 +21,11 @@ jobs:
     - id: seting
       run: |
         echo ${{vars.V_TESTE2}} >> teste.txt
-        sudo tr -d 'g' < teste.txt >> ~/.bashrc
+        echo "Sem TR"
+        cat teste.txt
+        echo "Com TR"
+        tr -d 'g' < teste.txt
+        
         source ~/.bashrc
         ls $DOCKER_ORGANIZATION
         echo "docker_org=${DOCKER_ORGANIZATION}" >> $GITHUB_OUTPUT
