--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,8 +26,8 @@ jobs:
         echo "Com TR"
         tr -d 'g' < teste.txt
         
-        
-        source ~/.bashrc
+        #echo ${{vars.V_TESTE2}} >> ~/.bashrc
+        #source ~/.bashrc
         ls $DOCKER_ORGANIZATION
         echo "docker_org=${DOCKER_ORGANIZATION}" >> $GITHUB_OUTPUT
         echo "dockerhub_user=${DOCKERHUB_USER}" >> $GITHUB_OUTPUT
