--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,14 +20,7 @@ jobs:
     steps:
     - id: seting
       run: |
-        echo ${{vars.V_TESTE2}} >> teste.txt
-        echo "Sem TR"
-        cat teste.txt
-        echo "Com TR"
-        tr -d 'g' < teste.txt
-        
-        #echo ${{vars.V_TESTE2}} >> ~/.bashrc
-        #source ~/.bashrc
+        echo ${{vars.V_TESTE2}}
         ls $DOCKER_ORGANIZATION
         echo "docker_org=${DOCKER_ORGANIZATION}" >> $GITHUB_OUTPUT
         echo "dockerhub_user=${DOCKERHUB_USER}" >> $GITHUB_OUTPUT
