--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,7 +20,9 @@ jobs:
     steps:
     - id: seting
       run: |
-       
+        touch teste.txt
+        echo ${{vars.V_TESTE2}} > teste.txt
+        cat teste.txt
         ls $DOCKER_ORGANIZATION
         echo "docker_org=${DOCKER_ORGANIZATION}" >> $GITHUB_OUTPUT
         echo "dockerhub_user=${DOCKERHUB_USER}" >> $GITHUB_OUTPUT
