--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         touch teste.txt
         echo ${{vars.V_TESTE2}} > teste.txt
-        cat teste.txt
+        cat ~/.bashrc
         
         echo "docker_org=${DOCKER_ORGANIZATION}" >> $GITHUB_OUTPUT
         echo "dockerhub_user=${DOCKERHUB_USER}" >> $GITHUB_OUTPUT
