--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,18 +6,7 @@ on:
       - main
 
 jobs:
-  bump-version:
-    if: "!startsWith(github.event.head_commit.message, 'bump:')"
-    runs-on: ubuntu-latest
-    name: "Bump version and create changelog with commitizen"
-    steps:
-      - name: Check out
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          ssh-key: "${{ secrets.COMMIT_KEY }}"
-      - name: Create bump and changelog
-        uses: commitizen-tools/commitizen-action@master
+  bump-version
       - name: Push using ssh
         run: |
-          git push origin main --tags
+          echo "teste"
