--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   bump-version:
-    name: Push using ssh
+    runs-on: ubuntu-latest
     steps:
         run: |
           echo "teste"
